--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="tournament-title">
                 <div class="world-cup">EL MUNDIALITO</div>
                 <div class="match-day">CUARTA FECHA</div>
-                <div class="match-date">Miércoles 9-Abril-2025</div>
+                <div class="match-date">Miércoles 7-Mayo-2025</div> 
                 <div class="countdown-container"></div>
             </div>
         </header>
