--- a/index.html
+++ b/index.html
@@ -197,44 +197,7 @@
         </main>
 
 
-
-
-
-
-    
-    <!-- Nuevo partido 6 -->
-    <div class="match" data-match-id="6">
-        <div class="team home" data-team="Mar">
-            <img src="img/Escudo-Marruecos.png" alt="Mar" class="team-logo">
-            <span class="team-name">Mar</span>
-        </div>
-        <div class="match-center">
-            <div class="vs">VS</div>
-            <div class="match-time">21:00</div>
-            <div class="match-stadium">Estadio Ibn Batouta</div>
-        </div>
-        <div class="team away" data-team="Ecu">
-            <span class="team-name">Ecu</span>
-            <img src="img/Escudo-Ecuador.png" alt="Ecu" class="team-logo">
-        </div>
-        <div class="match-details">
-            <button class="details-btn">Ver Detalles <i class="fas fa-chevron-down"></i></button>
-            <div class="details-content">
-                <div class="match-referee">Árbitro: Mustapha Ghorbal</div>
-                <div class="match-weather">
-                    <i class="fas fa-moon"></i> 24°C - Noche despejada
-                </div>
-            </div>
-        </div>
-  
-
-
-
-
-
-
-
-
+<!--  CON EL MAIN CERRAR OTRO NUEVO... -->
 
 
 
